--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -66,7 +66,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+GameDefaultMap=/Game/Maps/Lobbies.Lobbies
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/BisMigrateModified.BisMigrateModifiedGameMode
 GlobalDefaultServerGameMode=None
